base endpoin to handle searchbar autocompletion
